--- a/src/app/modules/products/components/product-form/product-form.component.html
+++ b/src/app/modules/products/components/product-form/product-form.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *ngIf="productAction?.event?.action === addProductAction">
   <form [formGroup]="addProductForm" (ngSubmit)="handleSubmitAddProduct()">
     <div class="card flex flex-column md:flex-column gap-3">
       <input pInputText placeholder="Nome" formControlName="name"/>
@@ -21,6 +21,35 @@
         label="Concluir"
         ></p-button>
       </div>
+    </div>
+  </form>
+</div>
+
+
+<div *ngIf="productAction?.event?.action === editProductAction">
+  <form [formGroup]="editProductForm" (ngSubmit)="handleSubmitEditProduct()">
+    <div  class="card flex flex-column md:flex-column gap-3">
+      <input pInputText placeholder="Nome" formControlName="name"/>
+      <input pInputText placeholder="Preço" formControlName="price"/>
+      <input pInputText placeholder="Descrição" formControlName="description"/>
+      <input pInputText type="number" placeholder="Quantidade" formControlName="amount"/>
+      <div *ngIf="renderDropdown">
+        <p-dropdown
+        styleClass="w-full"
+        [options]="categoriesDatas"
+        [(ngModel)]="selectCategory"
+        optionValue="id"
+        optionLabel="name"
+        formControlName="category_id"
+        ></p-dropdown>
+      </div>
+    </div>
+    <div class="flex flex-row justify-content-center align-content-center align-items-center m-1">
+      <p-button
+      [disabled]="!editProductForm.valid"
+      type="submit"
+      label="Concluir"
+      ></p-button>
     </div>
   </form>
 </div>
