Implementado o formulário para adicionar categoria, além de implementar o método para deletar categorias.

--- a/src/app/modules/categories/components/categories-table/categories-table.component.html
+++ b/src/app/modules/categories/components/categories-table/categories-table.component.html
@@ -43,6 +43,7 @@
                   styleClass="p-button-info"
                   icon="pi pi-plus"
                   label="Adcionar"
+                  (onClick)="handleCategoryEvent(addCategoryAction)"
                 ></p-button>
               </div>
             </th>
@@ -70,6 +71,7 @@
                   class="p-button-rounded p-button-danger"
                   pTooltip="remover Categoria"
                   tooltipPosition="top"
+                  (click)="handleDeleteCategoryEvent(category?.id, category?.name)"
                 ></button>
               </div>
             </td>
