--- a/src/app/modules/products/components/products-table/products-table.component.html
+++ b/src/app/modules/products/components/products-table/products-table.component.html
@@ -134,7 +134,7 @@
             <td>{{ product?.amount}}</td>
             <td>{{ product?.price | currency : "BRL"}}</td>
             <td [pTooltip]="product?.description" tooltipPosition="top">
-              {{ product?.description}}</td>
+              {{ product?.description | shorten : 25}}</td>
             <td>{{ product?.category?.name}}</td>
             <td>
               <div class="flex justify-content-center gap-3 align-items-center align-content-center">
