--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,65 +1,107 @@
 <div class="grid">
   <div class="col-12">
-    <div class="flex justify-content-center align-content-center text-aligh-center">
-
+    <div
+      class="flex justify-content-center align-content-center text-aligh-center"
+    >
       <form [formGroup]="loginForm" (ngSubmit)="onSubmitLoginForm()">
         <p-card
-        styleClass="mt-10"
-        header="login"
-        subheader="Faça login com sua conta existente!"
-        *ngIf="loginCard"
+          styleClass="mt-10"
+          header="login"
+          subheader="Faça login com sua conta existente!"
+          *ngIf="loginCard"
         >
-          <div class="flex justify-content-center align-content-center text-aligh-center">
-            <input type="email" pInputText placeholder="Email" formControlName="email">
+          <div
+            class="flex justify-content-center align-content-center text-aligh-center"
+          >
+            <input
+              type="email"
+              pInputText
+              placeholder="Email"
+              #emailInput
+              formControlName="email"
+            />
           </div>
-          <div class="flex justify-content-center align-content-center text-aligh-center mt-3">
-            <input type="password" pInputText placeholder="Senha" formControlName="password">
+          <div
+            class="flex justify-content-center align-content-center text-aligh-center mt-3"
+          >
+            <input
+              type="password"
+              pInputText
+              placeholder="Senha"
+              #passwordInput
+              formControlName="password"
+            />
           </div>
           <div class="card flex justify-content-center mt-3">
             <button
-            type="submit"
-            pButton
-            pRipple
-            label="login"
-            [disabled]="!this.loginForm.valid"
+              type="submit"
+              pButton
+              pRipple
+              label="login"
+              [disabled]="!this.loginForm.valid"
             ></button>
           </div>
           <span
-          class="flex justify-content-center align-content-center text-aligh-center mt-3 text-red-600 font-semibold cursor-pointer"
-          (click)="loginCard = !loginCard"
-          > Cria conta</span>
+            class="flex justify-content-center align-content-center text-aligh-center mt-3 text-red-600 font-semibold cursor-pointer"
+            (click)="loginCard = !loginCard"
+          >
+            Cria conta</span
+          >
         </p-card>
       </form>
 
       <form [formGroup]="signUpForm" (ngSubmit)="onSubmitSignUpForm()">
         <p-card
-        styleClass="mt-10"
-        header="Cria conta"
-        subheader="Crie já sua conta gratuita!"
-        *ngIf="!loginCard"
+          styleClass="mt-10"
+          header="Cria conta"
+          subheader="Crie já sua conta gratuita!"
+          *ngIf="!loginCard"
         >
-          <div class="flex justify-content-center align-content-center text-aligh-center">
-            <input type="text" pInputText placeholder="nome" formControlName="name">
+          <div
+            class="flex justify-content-center align-content-center text-aligh-center"
+          >
+            <input
+              type="text"
+              pInputText
+              placeholder="nome"
+              formControlName="name"
+            />
           </div>
-          <div class="flex justify-content-center align-content-center text-aligh-center mt-3">
-            <input type="email" pInputText placeholder="Email" formControlName="email">
+          <div
+            class="flex justify-content-center align-content-center text-aligh-center mt-3"
+          >
+            <input
+              type="email"
+              pInputText
+              placeholder="Email"
+              formControlName="email"
+            />
           </div>
-          <div class="flex justify-content-center align-content-center text-aligh-center mt-3">
-            <input type="password" pInputText placeholder="Senha" formControlName="password">
+          <div
+            class="flex justify-content-center align-content-center text-aligh-center mt-3"
+          >
+            <input
+              type="password"
+              pInputText
+              placeholder="Senha"
+              formControlName="password"
+            />
           </div>
           <div class="card flex justify-content-center mt-3">
             <button
-            type="submit"
-            pButton
-            pRipple
-            label="Cria conta"
-            [disabled]="!this.signUpForm.valid"
+              type="submit"
+              pButton
+              pRipple
+              label="Cria conta"
+              [disabled]="!this.signUpForm.valid"
             ></button>
           </div>
           <span
-          class="flex justify-content-center align-content-center text-aligh-center mt-3 text-red-600 font-semibold cursor-pointer"
-          (click)="loginCard = !loginCard"
-          > Fazer Longin</span>
+            class="flex justify-content-center align-content-center text-aligh-center mt-3 text-red-600 font-semibold cursor-pointer"
+            (click)="loginCard = !loginCard"
+          >
+            Fazer Longin</span
+          >
         </p-card>
       </form>
     </div>
