--- a/src/app/shared/components/toolbar-navigation/toolbar-navigation.component.html
+++ b/src/app/shared/components/toolbar-navigation/toolbar-navigation.component.html
@@ -5,12 +5,30 @@
   </div>
 
   <div class="p-toolbar-group-center">
-    <p-button icon="pi pi-cart-plus" label="Produtos" routerLink="/products" styleClass="bg-indigo-800 p-button-secondary"
-      routerLinkActive="exact_route" class="mr-2"></p-button>
-    <p-button icon="pi pi-ticket" label="Categorias" routerLink="/categories"
-      styleClass="bg-indigo-800 p-button-secondary" routerLinkActive="exact_route" class="mr-2"></p-button>
-      <p-button icon="pi pi-credit-card" label="Efetuar" routerLink="/products"
-      styleClass="bg-indigo-800 p-button-secondary" routerLinkActive="exact_route" class="mr-2"></p-button>
+    <p-button
+      icon="pi pi-cart-plus"
+      label="Produtos"
+      routerLink="/products"
+      styleClass="bg-indigo-800 p-button-secondary"
+      routerLinkActive="exact_route"
+      class="mr-2"
+    ></p-button>
+    <p-button
+      icon="pi pi-ticket"
+      label="Categorias"
+      routerLink="/categories"
+      styleClass="bg-indigo-800 p-button-secondary"
+      routerLinkActive="exact_route"
+      class="mr-2"
+    ></p-button>
+    <p-button
+      icon="pi pi-credit-card"
+      label="Efetuar"
+      routerLink="/products"
+      styleClass="bg-indigo-800 p-button-secondary"
+      class="mr-2"
+      (onClick)="handleSaleProduct()"
+    ></p-button>
   </div>
 
   <div class="p-toolbar-group-end">
